se agrega función para crear ahorros y servicio de loader

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,14 @@
 
 }
 
+.pop-date{
+    &::part(content){
+        width: 300px;
+        background-color: red;
+      }
+      
+}
+
 
 .pointer{
     cursor: pointer;
