--- a/src/app/pages/ahorros/form/form.component.html
+++ b/src/app/pages/ahorros/form/form.component.html
@@ -1,23 +1,36 @@
 <app-header title="Crear Ahorro" [datos]="headerOptions"></app-header>
+<ion-content>
+  <ion-list lines="none" class="ion-no-margin" [formGroup]="form">
+    <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+      <ion-input formControlName="nombre"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Objetivo ahorro</ion-label>
+      <ion-input placeholder="¿Cuanto quieres ahorrar?" formControlName="objetivo" type="number"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Tipo de ahorro</ion-label>
+      <ion-select interface="action-sheet" mode="ios" formControlName="tipo_ahorro">
+        <ion-select-option *ngFor="let tipo of tiposAhorro"  [value]="tipo.id">{{ tipo.nombre }}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item *ngIf="form.get('tipo_ahorro').value === 2">
+      <ion-label position="floating">Intervalo</ion-label>
+      <ion-input formControlName="intervalo" placeholder="Intervalo de lo que vas a ahorrar"  type="number"></ion-input>
+    </ion-item>
+    <ion-item >
+      <ion-label>Sin fecha meta</ion-label>
+      <ion-toggle formControlName="requiereFecha"></ion-toggle>
+    </ion-item>
+    <ion-item *ngIf="!form.get('requiereFecha').value">
+      <ion-label position="floating">Fecha Meta</ion-label>
+      <ion-input formControlName="fechaMeta" (click)="openDatePicker()" readonly></ion-input>
+    </ion-item>
+  </ion-list>
+</ion-content>
 
-  <ion-content>
-    <ion-list lines="none" class="ion-no-margin">
-
-      <ion-item>
-        <ion-label position="floating">Nombre</ion-label>
-        <ion-input ></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Objetivo ahorro</ion-label>
-        <ion-input placeholder="¿Cuanto quieres ahorrar?"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Tipo de ahorro</ion-label>
-        <ion-input></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Intervalo</ion-label>
-        <ion-input placeholder="Intervalo de lo que vas a ahorrar"></ion-input>
-      </ion-item>
-    </ion-list>
-  </ion-content>
+<ion-footer class="ion-text-center ion-no-border" collapse="fade">
+  <ion-button color="primary" [disabled]="form.invalid"  (click)="save()" > Guardar </ion-button>
+  <ion-button color="danger" (click)="modalCtrl.dismiss()"> Cancelar </ion-button>
+</ion-footer>
