cambios deudas y ahorros

--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -36,9 +36,8 @@
 
         <ion-item  class="mantener-sesion" lines="none">
           <ion-checkbox formControlName="aceptarTerminos"></ion-checkbox>
-          <ion-label> Acepto términos y condiciones </ion-label>
+          <ion-label> <small>Acepto términos y condiciones</small> </ion-label>
         </ion-item>
-
       
         <ion-button color="primary" class="login-button ion-activatable ripple-parent" shape="round" (click)="register()">
           <ion-icon name="enter-outline" slot="start"></ion-icon>
@@ -46,8 +45,6 @@
           <ion-ripple-effect></ion-ripple-effect>
         </ion-button>
 
-
-              
       </ion-col>
     </ion-row>
   </ion-grid>
