--- a/src/app/pages/deudas/deudas.page.html
+++ b/src/app/pages/deudas/deudas.page.html
@@ -11,9 +11,7 @@
                 <ion-card-header class="ion-no-padding">
                   <ion-text>
                     <h5>
-
                       {{ ahorro.nombre | titlecase }}
-
                     </h5>
                   </ion-text>
                   <ion-card-subtitle>Meta: {{ ahorro.objetivo | currency:"$":"symbol"  }}</ion-card-subtitle>
@@ -22,20 +20,23 @@
               </ion-col>
               <ion-col size="6">
                 <ion-row>
-                  
-                  <ion-col size="12" class="ion-text-end">
-                    <ion-button color="danger">
-                      <ion-icon slot="icon-only" name="trash"></ion-icon>
-                    </ion-button>
-                    <ion-button >
-                      <ion-icon slot="icon-only" name="create"></ion-icon>
-                    </ion-button>
+                  <ion-col size="10">
+                    <small>Tipo: {{ getTipoAhorro(ahorro.tipo_ahorro) }}</small>
                   </ion-col>
+                  <ion-col size="2" class="ion-text-end">
+                    <ion-icon color="danger" name="trash"></ion-icon>
+                    <!--
+                      <ion-button >
+                        <ion-icon slot="icon-only" name="create"></ion-icon>
+                      </ion-button>
+                    -->
+                  </ion-col>
+                 
 
                   <ion-col size="12">
                     <ion-card-content class="ion-no-padding">
                       <ion-card-subtitle>{{ahorro.percent}}%</ion-card-subtitle>
-                      <ion-progress-bar value="0.{{ahorro.percent}}" ></ion-progress-bar>
+                      <ion-progress-bar value="{{ahorro.percent/100}}" ></ion-progress-bar>
                     </ion-card-content>
                   </ion-col>
                 </ion-row>
