--- a/src/app/pages/ahorros/ahorros.page.html
+++ b/src/app/pages/ahorros/ahorros.page.html
@@ -1,10 +1,9 @@
 <app-header title="Ahorros" [datos]="headerOptions"></app-header>
-
 <ion-content>
   <ion-grid fixed>
     <ion-row>
       <ion-col size="12" size-md="6" *ngFor="let ahorro of list" >
-        <ion-card class="pointer item">
+        <ion-card class="pointer item" (click)="openModalView(ahorro)">
           <ion-grid fixed>
             <ion-row>
               <ion-col size="6" class="col-data">
@@ -31,8 +30,6 @@
                       </ion-button>
                     -->
                   </ion-col>
-                 
-
                   <ion-col size="12">
                     <ion-card-content class="ion-no-padding">
                       <ion-card-subtitle>{{ahorro.percent}}%</ion-card-subtitle>
