--- a/src/app/pages/ahorros/vista/vista.component.scss
+++ b/src/app/pages/ahorros/vista/vista.component.scss
@@ -20,9 +20,14 @@ ion-content{
         }
 
         .cell{
+            cursor: pointer;
             border: 1px solid #195d9f12;
             display: flex;
             justify-content: space-between;
+
+            &:hover{
+                background-color: #c1c1c11f;
+            }
         }
 
         .checked{
