--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -13,6 +13,7 @@
           <h1>Iniciar sesión</h1>
         </ion-text>
 
+        <ion-label >Correo Electrónico</ion-label>
         <ion-item  class="input">
           <ion-input placeholder="Correo Electrónico" formControlName="email"></ion-input>
         </ion-item>
@@ -23,6 +24,7 @@
           <ion-note color="danger">{{ forms.getErrors(form, 'email').email.message }}</ion-note>
         </ion-text>  
 
+        <ion-label >Contraseña</ion-label>
         <ion-item  class="input">
           <ion-input placeholder="Contraseña" formControlName="password" type="password"></ion-input>     
         </ion-item>
