--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -36,7 +36,7 @@ ion-grid{
             .input{
                 border-radius: 20px;
                 border: 1px solid #3780ff9e;
-                margin: 10px 0 0px 0;
+                margin: 0px 0px 10px 0px;
             }
 
             .mantener-sesion{
