--- a/src/app/pages/ahorros/ahorros.page.html
+++ b/src/app/pages/ahorros/ahorros.page.html
@@ -2,41 +2,45 @@
 <ion-content>
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="12" size-md="6" *ngFor="let ahorro of list" >
-        <ion-card class="pointer item" (click)="openModalView(ahorro)">
+      <ion-col size="12" size-md="4" *ngFor="let ahorro of list" >
+        <ion-card class="pointer item">
           <ion-grid fixed>
             <ion-row>
-              <ion-col size="6" class="col-data">
+              <ion-col size="12">
                 <ion-card-header class="ion-no-padding">
                   <ion-text>
                     <h5>
                       {{ ahorro.nombre | titlecase }}
                     </h5>
                   </ion-text>
-                  <ion-card-subtitle>Meta: {{ ahorro.objetivo | currency:"$":"symbol"  }}</ion-card-subtitle>
+                  <ion-card-subtitle>{{ahorro.percent}}%</ion-card-subtitle>
+                  <ion-progress-bar value="{{ahorro.percent/100}}" ></ion-progress-bar>
+                  <ion-card-subtitle class="meta-tipo">                     
+                    <span>
+                      Meta: {{ ahorro.objetivo | currency:"$":"symbol"  }}
+                    </span>                    
+                    <small>
+                      Tipo: {{ getTipoAhorro(ahorro.tipo_ahorro) }}
+                    </small>
+                  </ion-card-subtitle>
                   <ion-card-subtitle>Falta: {{ (ahorro.objetivo - ahorro.ahorrado) | currency:"$":"symbol"  }}</ion-card-subtitle>
                 </ion-card-header>
-              </ion-col>
-              <ion-col size="6">
-                <ion-row>
-                  <ion-col size="10">
-                    <small>Tipo: {{ getTipoAhorro(ahorro.tipo_ahorro) }}</small>
-                  </ion-col>
-                  <ion-col size="2" class="ion-text-end">
-                    <ion-icon color="danger" name="trash"></ion-icon>
-                    <!--
-                      <ion-button >
-                        <ion-icon slot="icon-only" name="create"></ion-icon>
-                      </ion-button>
-                    -->
-                  </ion-col>
-                  <ion-col size="12">
-                    <ion-card-content class="ion-no-padding">
-                      <ion-card-subtitle>{{ahorro.percent}}%</ion-card-subtitle>
-                      <ion-progress-bar value="{{ahorro.percent/100}}" ></ion-progress-bar>
-                    </ion-card-content>
-                  </ion-col>
-                </ion-row>
+                <ion-card-content class="ion-text-end">
+
+                  <ion-button color="primary" (click)="openModalView(ahorro)">
+                    <ion-icon name="eye"></ion-icon>
+                  </ion-button>
+
+
+                  <ion-button color="secondary">
+                    <ion-icon name="create"></ion-icon>
+                  </ion-button>
+
+                  <ion-button color="danger" (click)="alertDelete(ahorro)">
+                    <ion-icon name="trash" ></ion-icon>
+                  </ion-button>
+                
+                </ion-card-content>
               </ion-col>
             </ion-row>
           </ion-grid>          
