--- a/src/app/pages/ahorros/ahorros.page.scss
+++ b/src/app/pages/ahorros/ahorros.page.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     border: 4px solid #5a74f836;
     margin: auto;
+    background-color: #6fa1f50a;
 
     h5{
         text-align: center;
@@ -18,6 +19,11 @@
         height: 7px;
         border-radius: 5px;
         --progress-background: var(--violet);
+    }
+
+    .meta-tipo{
+        display: flex;
+        justify-content: space-between;
     }
 }
 
