--- a/src/app/pages/ahorros/vista/vista.component.html
+++ b/src/app/pages/ahorros/vista/vista.component.html
@@ -45,6 +45,9 @@
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
+      <ion-item *ngIf="!datosAhorro?.montos?.length" class="ion-text-center">
+        <ion-label> No hay montos </ion-label>
+      </ion-item>
     </ion-list>
 
     <ion-list lines="full" *ngIf="datosAhorro?.tipo_ahorro === 2" >
