--- a/src/app/pages/deudas/deudas.page.html
+++ b/src/app/pages/deudas/deudas.page.html
@@ -1,4 +1,4 @@
-<app-header title="Deudas"></app-header>
+<app-header title="Deudas" [datos]="headerOptions"></app-header>
 
 <ion-content>
   <ion-grid fixed>
@@ -31,8 +31,6 @@
                       </ion-button>
                     -->
                   </ion-col>
-                 
-
                   <ion-col size="12">
                     <ion-card-content class="ion-no-padding">
                       <ion-card-subtitle>{{ahorro.percent}}%</ion-card-subtitle>
