se agregan cargadores, guard de sesión, opción de logout y conexión, servicio y componente de noticias

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,1 +1,1 @@
-<ion-datetime size="cover" (ionChange)="selectDate($event)" [locale]="'es'" [min]="today" ></ion-datetime>
+<ion-datetime size="cover" (ionChange)="selectDate($event)" clearText="Limpiar" [locale]="'es'" [min]="today" [max]="max" presentation="date" [showClearButton]="true"  ></ion-datetime>
