--- a/src/app/pages/ahorros/form/form.component.html
+++ b/src/app/pages/ahorros/form/form.component.html
@@ -7,7 +7,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Objetivo ahorro</ion-label>
-      <ion-input placeholder="¿Cuanto quieres ahorrar?" formControlName="objetivo" type="number"></ion-input>
+      <ion-input placeholder="¿Cuanto quieres ahorrar?" formControlName="objetivo" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Tipo de ahorro</ion-label>
