--- a/src/app/pages/folder.page.html
+++ b/src/app/pages/folder.page.html
@@ -12,13 +12,12 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-        <ion-item routerDirection="root" [routerLink]="'auth'" lines="none" detail="false" >
+        <ion-item class="pointer" (click)="auth.logout()" lines="none" detail="false" >
           <ion-icon slot="start" name="log-out-outline"></ion-icon>
           <ion-label>Cerrar sesión</ion-label>
         </ion-item>
       </ion-content>
       
-     
     </ion-menu>
     <ion-router-outlet  id="main-content"></ion-router-outlet>
   </ion-split-pane>
