--- a/src/app/pages/deudas/deudas.page.html
+++ b/src/app/pages/deudas/deudas.page.html
@@ -27,7 +27,7 @@
                   <ion-button color="primary" (click)="openModalView(deuda)">
                     <ion-icon name="eye"></ion-icon>
                   </ion-button>
-                  <ion-button color="secondary">
+                  <ion-button color="secondary" (click)="openModalEdit(deuda)">
                     <ion-icon name="create"></ion-icon>
                   </ion-button>
                   <ion-button color="danger" (click)="alertDelete(deuda)">
