--- a/src/app/pages/noticias/noticias.page.html
+++ b/src/app/pages/noticias/noticias.page.html
@@ -4,7 +4,7 @@
     <ion-grid fixed>
         <ion-row>
             <ion-col size-xs="12" size-md="4" *ngFor="let new of news">
-                <ion-card class="pointer">
+                <ion-card class="pointer" (click)="ver(new)">
                     <ion-card-header>
                         <!-- 
                             <ion-card-subtitle>{{ new.title }}</ion-card-subtitle>
