se implementa opción de recuperación de clave

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -47,7 +47,7 @@
           <small>
             Olvidaste tu contraseña?
             <ion-text color="primary">
-              <b>Recuperala</b>
+              <b class="pointer" (click)="goTo('auth/recover')">Recuperala</b>
             </ion-text>
           </small>
         </ion-text>
