--- a/src/app/pages/ahorros/ahorros.page.scss
+++ b/src/app/pages/ahorros/ahorros.page.scss
@@ -38,3 +38,8 @@ ion-content::part(background){
     border-radius: 20px;
     background-color: #e3edff33;
 }
+
+#segment{
+    width: 99%;
+    margin: auto;
+}
