--- a/src/app/pages/contactos/contactos.page.scss
+++ b/src/app/pages/contactos/contactos.page.scss
@@ -14,3 +14,8 @@ ion-content::part(background){
     border-radius: 20px;
     background-color: #e3edff33;
 }
+
+ion-list{
+    background: none;
+    padding: 10px 6px 6px 6px;
+}
