--- a/src/app/pages/contactos/contactos.page.html
+++ b/src/app/pages/contactos/contactos.page.html
@@ -1,12 +1,31 @@
-<app-header title="Contactos"></app-header>
+<app-header title="Contactos" [datos]="headerOptions"></app-header>
 
 <ion-content>
-  <ion-list lines="full">
-    <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,]" >
-      <ion-avatar slot="start">
-        <img src="https://d29fhpw069ctt2.cloudfront.net/icon/image/84587/preview.svg">
-      </ion-avatar>
-      <ion-label>Pokémon</ion-label>
-    </ion-item>
+  <ion-list lines="none">
+
+
+    <ion-item-sliding *ngFor="let contact of listaContactos">
+      <ion-item>
+        <ion-label> {{ contact.nombre | titlecase }} </ion-label>
+        <ion-label slot="end">
+          <small> {{ contact.email }} </small>
+        </ion-label>
+      </ion-item>
+
+
+      <ion-item-options side="end">
+        <ion-item-option color="none">
+          <ion-button color="none">
+            <ion-icon name="trash" color="danger"></ion-icon>
+          </ion-button>
+        </ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+
+
+   
   </ion-list>
 </ion-content>
+
+
