se agrega aviso de terminos y condiciones, contadores en home

--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -1,3 +1,4 @@
+<!-- eslint-disable max-len-->
 
 
 
@@ -28,18 +29,19 @@
           <ion-input placeholder="Correo Electrónico" formControlName="email"></ion-input>
         </ion-item>
         <ion-item  class="input">
-          <ion-input placeholder="Contraseña" formControlName="password"></ion-input>
+          <ion-input type="password" placeholder="Contraseña" formControlName="password"></ion-input>
         </ion-item>
         <ion-item  class="input">
-          <ion-input placeholder="Confirmar Contraseña" formControlName="repassword"></ion-input>
+          <ion-input type="password" placeholder="Confirmar Contraseña" formControlName="repassword"></ion-input>
         </ion-item>
 
-        <ion-item  class="mantener-sesion" lines="none">
+        <span class="terms">
           <ion-checkbox formControlName="aceptarTerminos"></ion-checkbox>
-          <ion-label> <small>Acepto términos y condiciones</small> </ion-label>
-        </ion-item>
+          <ion-label> <small>Acepto <b id="terms-button">términos y condiciones</b></small> </ion-label>
+        </span>
       
-        <ion-button color="primary" class="login-button ion-activatable ripple-parent" shape="round" (click)="register()">
+        <!-- eslint-disable-next-line max-len -->
+        <ion-button color="primary" class="login-button ion-activatable ripple-parent" shape="round" [disabled]="form.invalid" (click)="register()">
           <ion-icon name="enter-outline" slot="start"></ion-icon>
           Registrarse
           <ion-ripple-effect></ion-ripple-effect>
@@ -50,3 +52,24 @@
   </ion-grid>
 
 </ion-content>
+
+
+<ion-modal trigger="terms-button" [swipeToClose]="true" #modalTerms>
+  <ng-template>
+    <div class="terms-content">
+      <h5>Propiedad del contenido del Portal web -Copyright-</h5>
+      <p>Está prohibida la reproducción total o parcial, traducción, inclusión, transmisión, almacenamiento o acceso a través de medios analógicos, digitales o de cualquier otro sistema o tecnología creada o por crearse, sin autorización previa y escrita de Personal Banca.</p>
+      <h5>Declaración de Privacidad</h5>
+      <p>La App Personal Banca es una instancia comprometida con los usuarios que además de proveer información, vela por su calidad y fidelidad. Para ello institucionalizó la Declaración de Privacidad, la cual determina y garantiza el debido proceso para utilizar información personal y privada de personas inscritas en el portal para no infligir de ninguna manera las disposiciones contenidas en la Ley Estatutaria del Habeas Data (Ley 1581 del 2012), reglamentada mediante el decreto 1377 del 2013 y en la Ley de Privacidad o Habeas Data Colombiana (Ley 1266 de 2008).</p>
+      <h5>Recolección de información personal</h5>
+      <p>La App Personal Banca recolecta información personal de sus usuarios para garantizar algunas de sus actividades. Los datos que con mayor frecuencia se solicitan son: nombre, identificación, dirección de correo electrónico, dirección de residencia, número telefónico.</p>
+      <p>También cuenta con información que se captura automáticamente relacionada con el hardware y software de los usuarios o clientes de Personal Banca, como dirección IP, tipo de explorador de Internet utilizado, nombre de dominio, tiempos de acceso y direcciones de sitios Web. Esta información es utilizada por el portal para garantizar la operación del servicio, asegurar su calidad y brindar estadísticas generales sobre el uso de la app.</p>
+      <h5>Habeas DATA</h5>
+      <p>Lo anterior es en base a la Ley 1266 de 2008 se encarga de regular el manejo de la información contenida en bases de datos personales, en especial la financiera, crediticia, comercial, casi inmediatamente es promulgada Ley 1273 de 2009 que por decirlo de una manera son los dientes que utiliza el estado para hacer cumplir dicho principio consagrando los  delitos de informáticos, ya por ultimo  Ley 1581 de 2012 y finalmente, la fase que podría denominarse de reglamentación administrativa, que ha implicado la puesta en funcionamiento del sistema de registro de bases de datos personales o registro de ficheros – RNBD ante la Superintendencia de Industria y Comercio.</p>
+      <p>La ley 1581 de 2012 dicta las disposiciones generales para la protección de datos personales, desarrolla el derecho constitucional de todos los titulares de la información puedan conocer, actualizar y rectificar su información personal que haya sido recogida en bases de datos o archivos.</p>
+    </div>
+    <ion-button expand="block" fill="solid" shape="round" class="ion-margin" (click)="modalTerms.dismiss()">
+      Cerrar <ion-icon slot="start" name="close"></ion-icon>
+    </ion-button>
+  </ng-template>
+</ion-modal>
