--- a/src/app/pages/ahorros/ahorros.page.html
+++ b/src/app/pages/ahorros/ahorros.page.html
@@ -39,18 +39,21 @@
                       Falta: {{ (ahorro.objetivo - ahorro.ahorrado) | currency:"$":"symbol"  }}
                     </span>
                     <span *ngIf="ahorro?.fechaMeta">
-                      Fecha Meta: {{ ahorro.fechaMeta | date}}
+                      <small>
+                        Fecha Meta: {{ ahorro.fechaMeta | date}}
+                      </small> 
                     </span>
                   </ion-card-subtitle>
+                  
                 </ion-card-header>
                 <ion-card-content class="ion-text-end">
-                  <ion-button color="primary" (click)="openModalView(ahorro)">
+                  <ion-button shape="round" color="primary" (click)="openModalView(ahorro)">
                     <ion-icon name="eye"></ion-icon>
                   </ion-button>
-                  <ion-button color="secondary" (click)="openModalEdit(ahorro)">
+                  <ion-button shape="round" color="secondary" (click)="openModalEdit(ahorro)" *ngIf="!ahorro.compartido">
                     <ion-icon name="create"></ion-icon>
                   </ion-button>
-                  <ion-button color="danger" (click)="alertDelete(ahorro)">
+                  <ion-button shape="round" color="danger" (click)="alertDelete(ahorro)" *ngIf="!ahorro.compartido">
                     <ion-icon name="trash" ></ion-icon>
                   </ion-button>                
                 </ion-card-content>
