--- a/src/app/pages/deudas/deudas.page.html
+++ b/src/app/pages/deudas/deudas.page.html
@@ -26,18 +26,18 @@
                       Falta: {{ (deuda.objetivo - deuda.ahorrado) | currency:"$":"symbol"  }}
                     </span>
                     <span *ngIf="deuda?.fechaMeta">
-                      Fecha Meta: {{ deuda.fechaMeta | date}}
+                      <small>Fecha Meta: {{ deuda.fechaMeta | date}}</small>
                     </span>
                   </ion-card-subtitle>
                 </ion-card-header>
                 <ion-card-content class="ion-text-end">
-                  <ion-button color="primary" (click)="openModalView(deuda)">
+                  <ion-button shape="round" color="primary" (click)="openModalView(deuda)">
                     <ion-icon name="eye"></ion-icon>
                   </ion-button>
-                  <ion-button color="secondary" (click)="openModalEdit(deuda)">
+                  <ion-button shape="round" color="secondary" (click)="openModalEdit(deuda)">
                     <ion-icon name="create"></ion-icon>
                   </ion-button>
-                  <ion-button color="danger" (click)="alertDelete(deuda)">
+                  <ion-button shape="round" color="danger" (click)="alertDelete(deuda)">
                     <ion-icon name="trash" ></ion-icon>
                   </ion-button>                
                 </ion-card-content>
