--- a/src/app/pages/noticias/noticias.page.html
+++ b/src/app/pages/noticias/noticias.page.html
@@ -12,7 +12,7 @@
                         <ion-card-title>{{ new.title }}</ion-card-title>
                     </ion-card-header>
                     
-                    <ion-img [src]="new.urlToImage"></ion-img>
+                    <ion-img [src]="new.urlToImage"  (error)="errorImage(img)" #img></ion-img>
                         <ion-card-content>
                         {{ new.description }}
                     </ion-card-content>
