se corrige error de filtrado en ahorros

--- a/src/app/pages/agregar/agregar.page.html
+++ b/src/app/pages/agregar/agregar.page.html
@@ -3,7 +3,7 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size-md="6" size="12" >
-        <ion-card class="pointer" routerDirection="root" routerLink="/pages/ahorros">
+        <ion-card class="pointer" routerDirection="root" routerLink="/pages/ahorros/crear">
           <ion-card-header class="ion-text-center">
             <ion-card-title>
               <ion-text color="primary">
@@ -18,7 +18,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-md="6" size="12">
-        <ion-card class="pointer" routerDirection="root" routerLink="/pages/deudas">
+        <ion-card class="pointer" routerDirection="root" routerLink="/pages/deudas/crear">
           <ion-card-header class="ion-text-center">
             <ion-card-title>
               <ion-text color="primary">
