--- a/src/app/pages/ahorros/form/form.component.html
+++ b/src/app/pages/ahorros/form/form.component.html
@@ -19,10 +19,9 @@
       <ion-label position="floating">Intervalo</ion-label>
       <ion-input formControlName="intervalo" placeholder="Intervalo de lo que vas a ahorrar"  type="number"></ion-input>
     </ion-item>
-    <ion-item>
+    <ion-item >
       <ion-label>Sin fecha meta</ion-label>
-
-      <ion-checkbox slot="end" formControlName="requiereFecha"></ion-checkbox>
+      <ion-toggle formControlName="requiereFecha"></ion-toggle>
     </ion-item>
     <ion-item *ngIf="!form.get('requiereFecha').value">
       <ion-label position="floating">Fecha Meta</ion-label>
