--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,4 @@
-<app-header title="Información"></app-header>
-
+<app-header title="Home"></app-header>
 <ion-content>
     <ion-grid fixed>
       <ion-row>
