cambio de headers news api

--- a/src/app/pages/agregar/agregar.page.html
+++ b/src/app/pages/agregar/agregar.page.html
@@ -13,7 +13,7 @@
           </ion-card-header>
         
           <ion-card-content>
-            <ion-img src="../../../assets/icon/pigmoney.svg"></ion-img>
+            <ion-img src="assets/icon/pigmoney.svg"></ion-img>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -28,7 +28,7 @@
           </ion-card-header>
         
           <ion-card-content>
-            <ion-img src="../../../assets/icon/savemoney.svg"></ion-img>
+            <ion-img src="assets/icon/savemoney.svg"></ion-img>
           </ion-card-content>
         </ion-card>
       </ion-col>
